# Animal_Detection

./: .gitignore  README.md  __init__.py  config.py  dataset.yaml  main.py  pyproject.toml  requirements.txt
animal_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
animal_detection_training/: args.yaml
data/: __init__.py  dataset_handler.py  yolo_preprocessor.py
datasets/: dataset.yaml  start_training.py  train.cache  val.cache
datasets/runs/classify/animal_detection_training/: args.yaml
datasets/training_runs/animal_classifier_run/: args.yaml
datasets/training_runs/final_animal_classifier/: args.yaml  results.csv
models/: __init__.py  best.pt  yolo_trainer.py
ui/: __init__.py  gui_app.py
utils/: __init__.py  detection.py
yolo_classification_dataset/: train.cache  train_yolo.py  val.cache
yolo_classification_dataset/runs/classify/animal_detection_training/: args.yaml
yolo_classification_dataset/runs/mlflow/0/: meta.yaml
yolo_classification_dataset/runs/mlflow/104633148602701343/: meta.yaml
yolo_classification_dataset/runs/mlflow/104633148602701343/0dd4e23f1a0144feaef5c9f33e169661/: meta.yaml
yolo_classification_dataset/runs/mlflow/104633148602701343/0dd4e23f1a0144feaef5c9f33e169661/params/: name
yolo_classification_dataset/runs/mlflow/104633148602701343/575b7a7ada5b494eaa4362aa21780c89/: meta.yaml
yolo_classification_dataset/runs/mlflow/104633148602701343/d31c16c7c8aa49d5813cbcf13ffdc4e8/: meta.yaml
(+13 files in other folders)
