[project]
name = "animal-detection"
version = "0.1.0"
description = "Real-time animal detection using YOLO deep learning with GUI interface and custom model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.5.0",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "kagglehub>=0.2.0",
    "numpy>=1.21.0",
    "Pillow>=7.1.2",
    "ultralytics>=8.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["animal_detection", "animal_detection.utils", "animal_detection.data", "animal_detection.models", "animal_detection.ui"]

[project.scripts]
animal-detection = "animal_detection.main:main"
train-animal-detector = "animal_detection.train_animal_detector:main"
